正確な表記に変更

--- a/articles/2022-02-madb.md
+++ b/articles/2022-02-madb.md
@@ -7,7 +7,7 @@ published: true
 ---
 
 - 文化庁が提供する[メディア芸術DB](https://mediag.bunka.go.jp/madb_lab/)には膨大な量のマンガ・アニメ・メディアアート等の情報が格納されている
-- そこで，約47年分の週刊少年サンデー・ジャンプ・チャンピオン・マガジンのデータを用いて，[データビジュアライゼーションの教材](https://kakeami.github.io/viz-madb/)を構築した
+- そこで，約47年分の週刊少年サンデー・ジャンプ・チャンピオン・マガジンのデータを用いて，[データビジュアライゼーションの教材](https://kakeami.github.io/viz-madb/)を作成した
 - 2022年2月13日に開催された[第2回メディア芸術データベース活用コンテストのビジュアルクリエイション部門](https://www.mediaarts-db-contest.com/)にて最優秀事例賞を受賞した
 - [ちょまどさん](https://zenn.dev/chomado)および関係者の皆様にたくさん宣伝して頂いた（ありがとうございます！）
 
@@ -39,7 +39,7 @@ https://youtu.be/VOzYQqis8q4
 
 ## 実装
 
-[岡崎先生の機械学習帳](https://chokkan.github.io/mlnote/index.html)を参考に，[Jupyter Lab](https://jupyter.org/)で作成したNotebookを[Jupyter Book](https://jupyterbook.org/intro.html)でビルドしました．ビジュアライゼーションに関しては[Plotly](https://plotly.com/)を採用することで，インタラクティブな分析が可能になりました．
+[岡崎先生の機械学習帳](https://chokkan.github.io/mlnote/index.html)を参考に，[Jupyter Lab](https://jupyter.org/)で作成したNotebookを[Jupyter Book](https://jupyterbook.org/intro.html)で変換しました．ビジュアライゼーションに関しては[Plotly](https://plotly.com/)を採用することで，インタラクティブな分析が可能になりました．
 
 https://youtu.be/PGgPYsh1dhY
 
